<resources>
    <string name="app_name">cellapptest</string>
    <string name="edit_message">Enter new URL</string>
    <string name="button_send">Send</string>
    <string name="button_bar">Bar Chart</string>
    <string name="button_line">Line Chart</string>
    <string name="button_inflater">Inflater</string>
    <string name="button_my_layout">My Layout</string>
    <string name="hold_me_here">Hold me here!</string>
    <string name="update_data">Update Data</string>

</resources>
