<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Update URL"
        android:onClick="sendMessage"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_inflater"
        android:onClick="createInflater"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/update_data"
        android:onClick="createBar"
        android:layout_gravity="center"
        />

    <EditText android:id="@+id/edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter ID requested"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Update ID"
        android:onClick="createLine"
        android:id="@+id/button"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="SpeedoTest"
        android:onClick="createSpeedo"
        android:id="@+id/speedotest"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Url, \nUpdate ID, \n press Update Data, \n wait 30 seconds, \n press Inflater, \n add Raw Data from Options top right"/>

</LinearLayout>
